# ece_scratch

./: .gitignore  CMakeLists.txt  ExampleModel1.mod  README.md
include/: Cell.h  ModFile.h  Model.h  Result.h  Vec3.h
src/: Cell.cpp  ModFile.cpp  Model.cpp  Vec3.cpp  main.cpp
